# UKBNexus_Xiaoqian

./: @  README.md  S5_clustering.ipynb  calculate_anxietyScore.ipynb  current_anxiety_data_set.csv  file_paths.txt  find_image_data.ipynb  need_download_data_set.csv  needed_participants.csv  output.txt  past_anxiety_data_set.csv  plot_clusters.py  pyproject.toml  retrieval_fields.ipynb  s1_retrieval_fields.ipynb  s2_calculate_anxietyScore.ipynb  s3-1_rename_files.ipynb  s3_find_image_data.ipynb  s4_calculate_fc.ipynb  s4_download_rename.ipynb  s5_2_classification_wholeBrain.ipynb  s5_classification_ROI.ipynb  s5_classification_wholeBrain.ipynb
ori/: S5_clustering.ipynb  s1_retrieval_fields.ipynb  s4_calculate_fc.ipynb  try.py
