[tool.poetry]
name = "ukbnexus-xiaoqian"
version = "0.1.0"
description = ""
authors = ["XiaoqianXiao <xiao.xiaoqian.320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
